Fix advancement frame alignment

--- a/css/common.css
+++ b/css/common.css
@@ -375,9 +375,9 @@ abbr.nounderline {
     background: url('/img/advancement-task.png');
     box-sizing: border-box;
     height: 52px;
-    padding-top: 9px;
+    padding-top: 8px;
     padding-right: 10px;
-    padding-bottom: 11px;
+    padding-bottom: 12px;
     padding-left: 10px;
     width: 52px;
 }
